# verovio_flutter

./: .gitignore  .gitmodules  .metadata  .pubignore  CHANGELOG.md  NATIVE_BUG_FIX.md  README.md  README_CN.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build-and-release.yml  ci.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
doc/: api.md  hit_map.md  hit_map_api.md  options.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/assets/testdata/: Melody Of The Night 5-new.mxl  Melody Of The Night 5.xml  minimal.mei
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  testdata_viewer.dart
ios/: verovio_flutter.podspec
ios/Classes/: verovio_flutter.c
ios/Frameworks/VerovioFFI.xcframework/: Info.plist
ios/VerovioFFI.xcodeproj/: project.pbxproj
ios/VerovioFFI.xcodeproj/xcshareddata/xcschemes/: VerovioFFI.xcscheme
lib/: verovio_flutter.dart
lib/src/: verovio_async_service.dart  verovio_bindings.dart  verovio_isolate_worker.dart  verovio_loader.dart  verovio_page_cache.dart  verovio_resource_manager.dart  verovio_service.dart
lib/src/hit_map/: affine2d.dart  glyph_cache.dart  hit_test.dart  models.dart  parser.dart  path_bbox.dart  path_bbox_core.dart  shape_bbox.dart  spatial_index.dart  transform_parser.dart  walker.dart  xml_attrs.dart
src/: CMakeLists.txt  verovio_ffi.cpp
tool/: build_android_so.sh  build_ios_xcframework.sh  sync_verovio_sources.sh
(+18 files in other folders)
